--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 	font-size: 18px;
 }
 
-.resize {
+.main {
 	width: 900px;
 	margin: 0 auto;
 	background-color: #ffffff
@@ -39,4 +39,19 @@ body {
 	width: 195px;
 	text-align: center;
 	vertical-align: top;
+}
+
+.social_inner {
+	display: inline-block;
+	float: right;	
+}
+
+.ul_none {
+	list-style: none;
+}
+
+.footer_social a {
+	text-decoration: none;
+	color: #31420B;
+	text-align: right;
 }
