--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+ul {list-style: none; padding-left: 10px;}
+p { margin: 0; padding: 10px 0;}
+a {text-decoration: none underline; color: #31420B; padding-bottom: 20px;}
+a:hover {color: green;}
+
 body {
 	width: 100%;
 	font-family: Times;
@@ -5,13 +10,15 @@ body {
 	background-image: url(images/background.jpg);
 }
 
-.main {
+.white {
+	background-color: white;
 	width: 900px;
 	margin: 0 auto;
-	background-color: white;
+	border-radius: 5px;
+
 }
 
-.main:after {
+.clear:after {
   content: "";
   display: table;
   clear: both;
@@ -20,12 +27,9 @@ body {
 .green {
 	background-color: #31420b;
 	color: white;
-	line-height: 48px;
+	line-height: 28px;
 	border-radius: 5px;
-}
-
-.main_content {
-	
+	padding-left: 15px;
 }
 
 .logo_inner {
@@ -47,14 +51,10 @@ body {
 }
 
 .social_inner ul {
-	list-style: none;
 	text-align: right;
 }
 
 .social_inner a {
-	text-decoration: none underline;
-	color: #31420B;
-	padding-bottom: 25px;
 	float: right;
 }
 
@@ -65,9 +65,10 @@ body {
 .mainbar {
 	display: inline-block;
 	float: left;
-	width: 66%;
+	width: 65%;
 	font-size: 16px;
 	line-height: 1.6em;
+	padding-left: 15px;
 }
 
 .mainbar p {
@@ -76,6 +77,7 @@ body {
 
 .mainbar h1 {
 	font-size: 28px;
+	line-height: 1.4em
 }
 
 .mainbar img {
@@ -85,22 +87,20 @@ body {
 .sidebar {
 	display: inline-block;
 	float: right;
-	width: 33%;
+	width: 32%;
 }
 
 .nav_header {
-	width: 300px;
-	height: 48px;
+	width: 297px;
+	background-color: #31420b;
+	color: white;
+	line-height: 28px;
 }
 
-.sidebar ul {
-	list-style: none;
-}
-
-.sidebar a {
-	text-decoration: none underline;
+.menu li {
+	/*text-decoration: none underline;*/
 	color: #31420B;
-	padding-bottom: 25px;
+	padding-bottom: 20px;
 }
 
 footer a {
